--- a/assets/css/sass/_settings.sass
+++ b/assets/css/sass/_settings.sass
@@ -25,14 +25,12 @@ $font_weight_boldest: 900
 
 
 // ------------------------------- FIX MEASURES
+$header_h_1: 111px
+$header_h_2: 100px
+$header_h_3: 85px
+$header_h_4: 60px
 
-$header_h_1: 139px
-$header_h_2: 111px
-$header_h_3: 100px
-$header_h_4: 85px
-$header_h_5: 60px
 
-$header_vertical_w: 70px
 
 $logo_w_big: 149px
 $logo_w_small: 111px
@@ -44,11 +42,8 @@ $footer_h_3: 60px
 $max_layout_width: 1200px
 
 $layout_padding: 80px
-$layout_verticalSidebar_padding: $header_vertical_w
-
 
 // ------------------------------ MEDIA QUERIES
-
 $break-smallest: 350px
 $break-small: 480px
 $break-medium: 650px
@@ -57,5 +52,9 @@ $break-large: 1350px
 
 // -------------------------------------- MENUS
 
-$useSideMenu: true
-$useStaticMenu: false
+// ---------------------------- SIDE MENU
+$useSideMenu: false
+$side_menu_w: 70px
+
+
+$useStaticMenu: true
