--- a/assets/css/sass/elements/_logo.sass
+++ b/assets/css/sass/elements/_logo.sass
@@ -32,5 +32,5 @@
       padding: 2.5% 0
     +respond-to(landscape)
       width: 72px
-      margin-left: -5%
+      +transform(translateX(-5%))
       padding-top: 5px
