--- a/assets/css/sass/elements/_staticMenu.sass
+++ b/assets/css/sass/elements/_staticMenu.sass
@@ -1,9 +1,13 @@
 =staticMenu($f)
   #main-header
     position: static
-  #sections::before
-    height: 0
-    .section.fullscreen
-      $h: calc(100vh - $f)
-      max-height: $h !important
-      min-height: $h !important
+    +transform(none)
+  #sections
+    &::before
+      height: 0
+    .section.fullscreen.last
+      $h: calc(100vh - #{$f})
+      max-height: $h
+      min-height: $h
+  .footer
+    height: $f
