fix side menu first click.

--- a/assets/css/sass/_settings.sass
+++ b/assets/css/sass/_settings.sass
@@ -1,6 +1,5 @@
 @import "colors/colors-constants"
 // ------------------------------------- COLORS
-
 $color1: $LIGHT_GRAY
 $color2: $DARK_GRAY
 $color3: $DARK_BLUE
@@ -11,7 +10,6 @@ $link_color2: $FUXSIA
 
 
 // -------------------------------------- FONTS
-
 $font_family_1: 'Lato', sans-serif
 $font_family_2: 'Dosis', sans-serif
 
@@ -30,14 +28,12 @@ $header_h_2: 100px
 $header_h_3: 85px
 $header_h_4: 60px
 
-
-
-$logo_w_big: 149px
-$logo_w_small: 111px
-
 $footer_h_1: 100px
 $footer_h_2: 80px
 $footer_h_3: 60px
+
+$logo_w_big: 149px
+$logo_w_small: 111px
 
 $max_layout_width: 1200px
 
@@ -51,10 +47,10 @@ $break-large: 1350px
 
 
 // -------------------------------------- MENUS
-
 // ---------------------------- SIDE MENU
-$useSideMenu: false
+$useSideMenu: true
 $side_menu_w: 70px
 
 
+// -------------------------- STATIC MENU
 $useStaticMenu: true
