--- a/assets/css/sass/layout/_layout.sass
+++ b/assets/css/sass/layout/_layout.sass
@@ -72,8 +72,7 @@ p
 
 +respond-to(landscape)
   @if $useSideMenu
-    +sideMenu($footer_h_3)
-
+    +sideMenu($header_h_4,$footer_h_3)
 
 +respond-to(small-height, max)
   @if $useStaticMenu
