--- a/assets/css/sass/elements/_sideMenu.sass
+++ b/assets/css/sass/elements/_sideMenu.sass
@@ -1,6 +1,6 @@
 $useSideMenu: false !default
 
-=sideMenu($f)
+=sideMenu($h, $f)
   html
     content: "hasSideMenu"
   #sections
@@ -10,10 +10,13 @@ $useSideMenu: false !default
   #main-header
     +fixed(0)
   .state2
-    #sections .section.last
-      $h: calc(100vh - #{$f})
-      min-height: $h
-      max-height: $h
+    #sections 
+      .section.last
+        $h2: calc(100vh - #{$f})
+        min-height: $h2
+        max-height: $h2
+      &::before
+        height: $h
     #main-header
       +fixed(0, $l: 0)
       width: $side_menu_w
