fix landscape logo push sections.

--- a/assets/css/sass/_settings.sass
+++ b/assets/css/sass/_settings.sass
@@ -48,7 +48,7 @@ $break-large: 1350px
 
 // -------------------------------------- MENUS
 // ---------------------------- SIDE MENU
-$useSideMenu: true
+$useSideMenu: false
 $side_menu_w: 70px
 
 
