--- a/assets/css/sass/elements/_logo.sass
+++ b/assets/css/sass/elements/_logo.sass
@@ -6,6 +6,7 @@
     float: none
   +respond-to(landscape)
     float: left
+    position: absolute
   // ----------------------------- STATE 1
   .state1 &
     width: $w1
