--- a/assets/css/sass/layout/_layout.sass
+++ b/assets/css/sass/layout/_layout.sass
@@ -88,6 +88,7 @@ p
 // ----------------------------------------- SECTION
 .section
   height: 100% 
+  width: 100%
   text-align: right
   +respond-to(medium)
     text-align: center 
