--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,8 @@ p {
       float: none; } }
   @media screen and (max-height: 650px) and (orientation: landscape) {
     #logo {
-      float: left; } }
+      float: left;
+      position: absolute; } }
   .state1 #logo {
     width: 149px;
     padding-top: 40px; }
@@ -573,73 +574,6 @@ p {
 .expanded + #collapsed-menu {
   display: none; }
 
-@media screen and (max-height: 650px) and (orientation: landscape) {
-  html {
-    content: "hasSideMenu"; }
-
-  #sections {
-    width: calc(100vw - 70px);
-    padding-left: 70px;
-    overflow: hidden; }
-
-  #main-header {
-    position: fixed;
-    z-index: 2000;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0; }
-
-  .state2 #sections .section.last {
-    min-height: calc(100vh - 60px);
-    max-height: calc(100vh - 60px); }
-  .state2 #sections::before {
-    height: 60px; }
-  .state2 #main-header {
-    position: fixed;
-    z-index: 2000;
-    top: 0;
-    left: 0;
-    width: 70px;
-    height: 100vh; }
-  .state2 #logo {
-    float: right;
-    width: 95%;
-    margin: 0 auto;
-    padding: 4% 0; }
-  .state2 #header-nav {
-    display: block;
-    visibility: visible;
-    opacity: 1;
-    -webkit-transition: visibility 0s linear 0.3s, opacity 0.3s linear;
-    -ms-transition: visibility 0s linear 0.3s, opacity 0.3s linear;
-    transition: visibility 0s linear 0.3s, opacity 0.3s linear;
-    position: relative;
-    top: 3%;
-    width: 100%;
-    height: 100%;
-    font-size: 0.65em;
-    text-align: right;
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none; }
-    .state2 #header-nav li {
-      width: 90%;
-      height: 15%;
-      display: block;
-      margin: 0;
-      border: none;
-      border-left: 6px solid #E9E8E3; }
-      .state2 #header-nav li.active-link, .state2 #header-nav li:hover {
-        border-left: 6px solid #DF3F54; }
-      .state2 #header-nav li:hover {
-        border-left: 6px solid #DF3F54; }
-      .touch-device .state2 #header-nav li.no-touch {
-        border-left: 6px solid #E9E8E3; }
-      .state2 #header-nav li a {
-        margin: 50% 0 0;
-        padding: 0;
-        line-height: 0; } }
 @media screen and (max-height: 650px) and (max-width: 700px) {
   #main-header {
     position: static;
@@ -662,6 +596,7 @@ p {
 
 .section {
   height: 100%;
+  width: 100%;
   text-align: right; }
   @media screen and (max-width: 650px) {
     .section {
