clean up/refactoring.

--- a/assets/css/sass/_settings.sass
+++ b/assets/css/sass/_settings.sass
@@ -1,4 +1,4 @@
-@import "colors/colors-constants"
+@import colors/colors-constants
 // ------------------------------------- COLORS
 $color1: $LIGHT_GRAY
 $color2: $DARK_GRAY
