--- a/assets/css/sass/elements/_mainHeader.sass
+++ b/assets/css/sass/elements/_mainHeader.sass
@@ -1,6 +1,6 @@
-@import "logo"
-@import "headerMenu"
-@import "collapsedMenu"
+@import logo
+@import headerMenu
+@import collapsedMenu
 
 =mainHeader
   #main-header
