--- a/assets/css/sass/fonts/_fonts-css.sass
+++ b/assets/css/sass/fonts/_fonts-css.sass
@@ -1,14 +1,4 @@
-$font_family_1: 'Lato', sans-serif !default
-$font_family_2: 'Dosis', sans-serif !default
-
-$base_font_size: 16px !default
-
-$font_weight_light: 100 !default
-$font_weight_middle: 400 !default
-$font_weight_bold: 600 !default
-$font_weight_bolder: 700 !default
-$font_weight_boldest: 900 !default
-
+@import fonts-defaultSettings
 
 body 
   font-family: $font_family_1
