clean up/refactoring.

--- a/assets/css/sass/colors/_colors-css.sass
+++ b/assets/css/sass/colors/_colors-css.sass
@@ -13,7 +13,7 @@ body
     color: $color2 
 
 // ------------------ SECTIONS 
-.section 
+#sections section 
   &.home 
     background-color: $color1
     color: $color2
@@ -42,7 +42,7 @@ body
       background-color: $color5 
   
 // --------------------- FOOTER
-.footer 
+footer 
   background-color: $color2
   color: $color1
   a
