--- a/assets/css/sass/elements/_headerWrapper.sass
+++ b/assets/css/sass/elements/_headerWrapper.sass
@@ -24,12 +24,12 @@
   .about &
     +respond-to(medium)
       width: 100%
-      .header
+      header
         width: 80%
         margin: auto
     +respond-to(small-height)
       width: 100%
-      .header
+      header
         width: 80%
         margin: auto
   .contact &
