--- a/assets/css/sass/elements/_staticMenu.sass
+++ b/assets/css/sass/elements/_staticMenu.sass
@@ -5,9 +5,9 @@
   #sections
     &::before
       height: 0
-    .section.fullscreen.last
+    section.fullscreen:last-child
       $h: calc(100vh - #{$f})
       max-height: $h
       min-height: $h
-  .footer
+  footer
     height: $f
