--- a/assets/css/sass/fonts/_fonts-css.sass
+++ b/assets/css/sass/fonts/_fonts-css.sass
@@ -40,8 +40,8 @@ a
     font-weight: $font_weight_boldest 
 
 // -------------------------------- SECTIONS
-.section 
-  .header 
+#sections section 
+  header 
     line-height: 1
     text-transform: uppercase
     white-space: nowrap
@@ -58,7 +58,7 @@ a
         font-weight: $font_weight_middle
     
 // ---------------------------------- FOOTER
-footer.container 
+footer 
   +respond-to(medium)  
     font-size: 13px 
   .site-info 
