--- a/assets/css/sass/elements/_sideMenu.sass
+++ b/assets/css/sass/elements/_sideMenu.sass
@@ -11,7 +11,7 @@ $useSideMenu: false !default
     +fixed(0)
   .state2
     #sections 
-      .section.last
+      section:last-child
         $h2: calc(100vh - #{$f})
         min-height: $h2
         max-height: $h2
