--- a/assets/css/sass/layout/_layout.sass
+++ b/assets/css/sass/layout/_layout.sass
@@ -68,7 +68,8 @@ p
   overflow: hidden
 
 // ------------------------------------- MAIN HEADER
-+mainHeader
+#main-header
+  +mainHeader
 +respond-to(landscape)
   @if $useSideMenu
     +sideMenu($header_h_4,$footer_h_3)
