--- a/assets/css/sass/partials/_mixins.sass
+++ b/assets/css/sass/partials/_mixins.sass
@@ -88,3 +88,6 @@ $break-large: 1350px !default
   @else if $media == small-height 
     @media screen and (#{$val}-height: $break-medium) and (#{$val}-width: 700px)
       @content 
+  @else if $media
+    @media screen and (#{$val}-width: $media)
+      @content
