have to unify selector placement.

--- a/assets/css/sass/elements/_collapsedMenu.sass
+++ b/assets/css/sass/elements/_collapsedMenu.sass
@@ -1,30 +1,31 @@
 =collapsedMenu
-  float: right
-  &:hover
-    cursor: pointer
-  +respond-to(landscape)
-    display: none  
-  a
-    display: block
-    // -------- icon size
-    width: 23px
-    height: 19px
-    // -------- to avoid jumps on hover
-    padding: 30px
-    margin: -30px
-    background: url('../images/menu.png') no-repeat 30px
-  // ----------------------------- STATE 1
-  .state1 &
-    +hide
-    +respond-to(small)
-      display: none
-  // ----------------------------- STATE 2
-  .state2 &
-    +show
-    margin-top: 40px
-    +respond-to(small)
-      display: none
+  #collapsed-menu
+    float: right
     &:hover
+      cursor: pointer
+    +respond-to(landscape)
+      display: none  
+    a
+      display: block
+      // -------- icon size
+      width: 23px
+      height: 19px
+      // -------- to avoid jumps on hover
+      padding: 30px
+      margin: -30px
+      background: url('../images/menu.png') no-repeat 30px
+    // ----------------------------- STATE 1
+    .state1 &
       +hide
-  .expanded + &
-    display: none
+      +respond-to(small)
+        display: none
+    // ----------------------------- STATE 2
+    .state2 &
+      +show
+      margin-top: 40px
+      +respond-to(small)
+        display: none
+      &:hover
+        +hide
+    .expanded + &
+      display: none
