--- a/assets/css/sass/elements/_mainHeader.sass
+++ b/assets/css/sass/elements/_mainHeader.sass
@@ -3,10 +3,10 @@
 @import collapsedMenu
 
 =mainHeader
-  +fixed(0)
+  #main-header
+    +fixed(0)
   #logo
     +logo($logo_w_big, $logo_w_small)
   #header-nav
     +headerMenu
-  #collapsed-menu
-    +collapsedMenu
+  +collapsedMenu
