--- a/assets/css/sass/layout/_layout.sass
+++ b/assets/css/sass/layout/_layout.sass
@@ -33,7 +33,8 @@ p
   padding-bottom: .3em 
 
 // ------------------------------- setLayoutHeights
-+setLayoutHeights($header_h_1, $footer_h_1)
++respond-to(small, min)  
+  +setLayoutHeights($header_h_1, $footer_h_1)
 +respond-to(small)
   +setLayoutHeights($header_h_2, $footer_h_2) 
 +respond-to(smallest)
@@ -65,8 +66,7 @@ p
   overflow: hidden
 
 // ------------------------------------- MAIN HEADER
-#main-header
-  +mainHeader
++mainHeader
 +respond-to(landscape)
   @if $useSideMenu
     +sideMenu($header_h_4,$footer_h_3)
