small typo fixes.

--- a/assets/css/sass/fonts/_fonts-css.sass
+++ b/assets/css/sass/fonts/_fonts-css.sass
@@ -64,7 +64,7 @@ footer
     font-weight: $font_weight_bolder
     font-size: .95em
     a
-      font-weight: font_weight_boldest 
+      font-weight: $font_weight_boldest 
   .social-links 
     // otherwise webkit adds margin 1em 
     font-size: 0
