--- a/assets/css/sass/partials/_mixins.sass
+++ b/assets/css/sass/partials/_mixins.sass
@@ -10,6 +10,11 @@
   transform: $args
 
 
+=filter($args...)
+  -webkit-filter: $args
+  filter: $args
+
+
 =hide 
   visibility: hidden
   opacity: 0
