--- a/assets/css/sass/elements/_footer.sass
+++ b/assets/css/sass/elements/_footer.sass
@@ -14,6 +14,8 @@
       height: 40%
       p 
         padding: 0
+    a:hover
+      +filter(contrast(2))
   .social-links
     float: right
     +respond-to(small)
@@ -25,9 +27,9 @@
       padding-left: 6px
       &:hover 
         cursor: pointer
+        +filter(sepia(.6))
       &:first-child
-        padding-left: 0
+        padding-left: 0          
       a
         width: 32px
         height: 32px
-
